change all AppBundle::jquery.collection.html.twig by jquery.collection.html.twig

--- a/src/Fuz/AppBundle/Resources/views/Advanced/customFormTheme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/customFormTheme.html.twig
@@ -27,7 +27,7 @@
 
     {%
         form_theme form
-            'FuzAppBundle::jquery.collection.html.twig'
+            'jquery.collection.html.twig'
             'FuzAppBundle:Advanced:advanced-theme.html.twig'
     %}
 
