--- a/src/Fuz/AppBundle/Resources/views/Advanced/formHavingSeveralFields.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/formHavingSeveralFields.html.twig
@@ -17,7 +17,7 @@
     <div class="row">
         {%
             form_theme form
-                'FuzAppBundle::jquery.collection.html.twig'
+                'jquery.collection.html.twig'
                 'FuzAppBundle:Advanced:addresses-theme.html.twig'
         %}
         {{ form(form) }}
