--- a/src/Fuz/AppBundle/Resources/views/Basic/basic.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Basic/basic.html.twig
@@ -12,7 +12,7 @@
 
     <p>This is a collection of simple text fields using the plugin with all default options.</p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
