--- a/src/Fuz/AppBundle/Resources/views/Home/home.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Home/home.html.twig
@@ -54,7 +54,7 @@
 
             {%
                 form_theme withPlugin
-                    'FuzAppBundle::jquery.collection.html.twig'
+                    'jquery.collection.html.twig'
                     'FuzAppBundle:Options:options-theme.html.twig'
             %}
             {{ form(withPlugin) }}
