--- a/src/Fuz/AppBundle/Resources/views/Options/PositionField/positionField.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/PositionField/positionField.html.twig
@@ -18,7 +18,7 @@
 
     {%
         form_theme form
-            'FuzAppBundle::jquery.collection.html.twig'
+            'jquery.collection.html.twig'
             'FuzAppBundle:Options/PositionField:formTheme.html.twig'
     %}
 
