--- a/src/Fuz/AppBundle/Resources/views/Options/buttonsCustomLocation.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/buttonsCustomLocation.html.twig
@@ -15,7 +15,7 @@
         <div class="col-md-3">
             <h3>Collection A</h3>
 
-            {% form_theme collectionA 'FuzAppBundle::jquery.collection.html.twig' %}
+            {% form_theme collectionA 'jquery.collection.html.twig' %}
             {{ form(collectionA) }}
 
             {% for value in collectionAData.values %}
@@ -26,7 +26,7 @@
         <div class="col-md-3">
             <h3>Collection B</h3>
 
-            {% form_theme collectionB 'FuzAppBundle::jquery.collection.html.twig' %}
+            {% form_theme collectionB 'jquery.collection.html.twig' %}
             {{ form(collectionB) }}
 
             {% for value in collectionBData.values %}
@@ -38,7 +38,7 @@
         <div class="col-md-3">
             <h3>Collection C</h3>
 
-            {% form_theme collectionC 'FuzAppBundle::jquery.collection.html.twig' %}
+            {% form_theme collectionC 'jquery.collection.html.twig' %}
             {{ form(collectionC) }}
 
             {% for value in collectionCData.values %}
