--- a/src/Fuz/AppBundle/Resources/views/Options/customButtons.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/customButtons.html.twig
@@ -14,7 +14,7 @@
 
     <p>Note that you can still do more advanced customization (of button's position) using your form theme.</p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
