--- a/src/Fuz/AppBundle/Resources/views/Options/dragAndDrop.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/dragAndDrop.html.twig
@@ -41,7 +41,7 @@
 
             {%
                 form_theme disabled.disabled
-                    'FuzAppBundle::jquery.collection.html.twig'
+                    'jquery.collection.html.twig'
                     'FuzAppBundle:Options:options-theme.html.twig'
             %}
             {{ form(disabled.disabled) }}
@@ -71,7 +71,7 @@
 
             {%
                 form_theme nobuttons.nobuttons
-                    'FuzAppBundle::jquery.collection.html.twig'
+                    'jquery.collection.html.twig'
                     'FuzAppBundle:Options:options-theme.html.twig'
             %}
             {{ form(nobuttons.nobuttons) }}
@@ -100,7 +100,7 @@
 
             {%
                 form_theme moreoptions.moreoptions
-                    'FuzAppBundle::jquery.collection.html.twig'
+                    'jquery.collection.html.twig'
                     'FuzAppBundle:Options:options-theme.html.twig'
             %}
             {{ form(moreoptions.moreoptions) }}
@@ -132,7 +132,7 @@
 
             {%
                 form_theme startupdate.startupdate
-                    'FuzAppBundle::jquery.collection.html.twig'
+                    'jquery.collection.html.twig'
                     'FuzAppBundle:Options:options-theme.html.twig'
             %}
             {{ form(startupdate.startupdate) }}
