--- a/src/Fuz/AppBundle/Resources/views/Options/fadeInFadeOut.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/fadeInFadeOut.html.twig
@@ -20,7 +20,7 @@
 
     <p>- Fade Out when removing an element from the collection: <input type="checkbox" class="fade-demo" id="fade-out" checked /></p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
