--- a/src/Fuz/AppBundle/Resources/views/Options/givenMinimumElements.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/givenMinimumElements.html.twig
@@ -12,7 +12,7 @@
 
     <p>Use <code>init_with_n_elements</code> option to ensure that your collection will be initialized with the given number of arguments.
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
