--- a/src/Fuz/AppBundle/Resources/views/Options/hideMoveUpDown.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/hideMoveUpDown.html.twig
@@ -16,7 +16,7 @@
 
     <p>Test it live: <input type="checkbox" id="test-it" /></p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
