--- a/src/Fuz/AppBundle/Resources/views/Options/initCallbacks.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/initCallbacks.html.twig
@@ -29,7 +29,7 @@
             <button id="demo" class="btn btn-danger">Click me</button>
             <br/><br/>
 
-            {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+            {% form_theme form 'jquery.collection.html.twig' %}
             {{ form(form) }}
 
             {% for value in formData.values %}
