--- a/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/collectionOfCollections.html.twig
@@ -21,7 +21,7 @@
 
     {%
         form_theme form
-            'FuzAppBundle::jquery.collection.html.twig'
+            'jquery.collection.html.twig'
             'FuzAppBundle:Advanced:advanced-theme.html.twig'
     %}
 
