--- a/src/Fuz/AppBundle/Resources/views/Advanced/fancyFormTheme.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/fancyFormTheme.html.twig
@@ -18,7 +18,7 @@
     <div class="row">
         {%
             form_theme form
-                'FuzAppBundle::jquery.collection.html.twig'
+                'jquery.collection.html.twig'
                 'FuzAppBundle:Advanced:fancy-theme.html.twig'
         %}
         {{ form(form) }}
