--- a/src/Fuz/AppBundle/Resources/views/Advanced/mvcCompliance.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/mvcCompliance.html.twig
@@ -20,7 +20,7 @@
         <code>data-collection="{% verbatim %}{{ form.collectionField.vars.id }}{% endverbatim %}"</code>.
     </p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
