--- a/src/Fuz/AppBundle/Resources/views/Advanced/usageWithDoctrine.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Advanced/usageWithDoctrine.html.twig
@@ -27,7 +27,7 @@
 
     {%
         form_theme form
-            'FuzAppBundle::jquery.collection.html.twig'
+            'jquery.collection.html.twig'
             'FuzAppBundle:Advanced:doctrine-theme.html.twig'
     %}
     {{ form(form) }}
