--- a/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
@@ -37,7 +37,7 @@
         <div class="col-md-6">
             <h3>Events before updating the collection</h3>
 
-             {% form_theme eventsBefore 'FuzAppBundle::jquery.collection.html.twig' %}
+             {% form_theme eventsBefore 'jquery.collection.html.twig' %}
             {{ form(eventsBefore) }}
 
             {% for value in eventsBeforeData.values %}
@@ -48,7 +48,7 @@
         <div class="col-md-6">
             <h3>Events after updating the collection</h3>
 
-            {% form_theme eventsAfter 'FuzAppBundle::jquery.collection.html.twig' %}
+            {% form_theme eventsAfter 'jquery.collection.html.twig' %}
             {{ form(eventsAfter) }}
 
             {% for value in eventsAfterData.values %}
