--- a/src/Fuz/AppBundle/Resources/views/Troubleshoot/customJqueryVersion.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Troubleshoot/customJqueryVersion.html.twig
@@ -16,7 +16,7 @@
     <p>Enter a jQuery URL in the field below to include it instead of the current version.</p>
     <p>You can find jQuery core urls at <a href="https://code.jquery.com/jquery/" target="new" rel="noopener noreferrer">https://code.jquery.com/jquery/</a></p>
 
-    {% form_theme form 'FuzAppBundle::jquery.collection.html.twig' %}
+    {% form_theme form 'jquery.collection.html.twig' %}
     {{ form(form) }}
 
     <hr/>
