replace all bundles/fuzapp/js/collection/jquery.collection.js by js/jquery.collection.js

--- a/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/eventCallbacks.html.twig
@@ -1,7 +1,7 @@
 {% extends 'FuzAppBundle::layout.html.twig' %}
 
 {% block extra_js %}
-    <script src="{{ asset('bundles/fuzapp/js/collection/jquery.collection.js') }}"></script>
+    <script src="{{ asset('js/jquery.collection.js') }}"></script>
 {% endblock %}
 
 {% block title %}JavaScript options : events on buttons{% endblock %}
