--- a/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
@@ -9,11 +9,11 @@
 {% block body %}
 
     <div class="jumbotron">
-      <h1>Welcome!</h1>
-      <p>
-          This website presents the <a href="https://github.com/ninsuo/symfony-collection">Symfony Collection jQuery Plugin</a> developped by
-          <a href="http://stackoverflow.com/users/731138/alain-tiemblo">Alain Tiemblo</a>.
-      </p>
+        <h1>Welcome!</h1>
+        <p>
+            This website presents the <a href="https://github.com/ninsuo/symfony-collection">Symfony Collection jQuery Plugin</a> developped by
+            <a href="http://stackoverflow.com/users/731138/alain-tiemblo">Alain Tiemblo</a>.
+        </p>
     </div>
 
     <h2>What exactly does this plugin?</h2>
@@ -29,16 +29,16 @@
         {# Without the collection plugin #}
         <div class="col-md-6">
 
-            <h3>Without jquery.collection.js</h3>
+            <h3 style="color:#FF4444;">Without jquery.collection.js</h3>
 
             <br/>
             <p>No way to add, move and delete elements... In most case, that's weird on form collections!</p>
             <br/>
 
-             {{ form(noPlugin) }}
+            {{ form(noPlugin) }}
 
-            {% for value in noPluginData.values %}
-                <p>Value : {{ value }}</p>
+            {% for fruit in noPluginData.fruits %}
+                <p>Chosen fruit : {{ fruit }}</p>
             {% endfor %}
 
         </div>
@@ -46,7 +46,7 @@
         {# With the collection plugin #}
         <div class="col-md-6">
 
-            <h3>With jquery.collection.js</h3>
+            <h3 style="color:#449944;">With jquery.collection.js</h3>
 
             <br/>
             <p>The default functionnality is not really beautiful but let you add, duplicate, move and delete elements in your collection. Don't worry, everything is easily customizable.</p>
@@ -55,12 +55,12 @@
             {%
                 form_theme withPlugin
                     'jquery.collection.html.twig'
-                    'FuzAppBundle:Options:options-theme.html.twig'
+                    'FuzAppBundle:Home/home:formTheme.html.twig'
             %}
             {{ form(withPlugin) }}
 
-            {% for value in withPluginData.values %}
-                <p>Value : {{ value }}</p>
+            {% for fruit in withPluginData.fruits %}
+                <p>Chosen fruit : {{ fruit }}</p>
             {% endfor %}
 
         </div>
@@ -69,12 +69,23 @@
 
     <div class="clear">&nbsp;</div>
 
+    {{
+        tabs([
+            'Controller/Home/HomeController.php',
+            'Entity/Home/Fruit.php',
+            'Form/Home/FruitType.php',
+            'Resources/views/Home/Home/home.html.twig',
+            'Resources/views/Home/Home/formTheme.html.twig',
+        ])
+    }}
+
+
 {% endblock %}
 
 {% block script %}
 
     <script type="text/javascript">
-        $('.withPlugin-collection').collection({allow_duplicate:true});
+        $('.withPlugin-collection').collection({allow_duplicate: true});
     </script>
 
 {% endblock %}
