--- a/src/Fuz/AppBundle/Resources/views/tabs.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/tabs.html.twig
@@ -2,13 +2,14 @@
 
         <ul class="nav nav-tabs">
             {% for file, contents in tabs %}
-                <li {{ loop.index == 1 ? 'class="active"' : '' }}><a href="#i{{ file|md5 }}" data-toggle="tab">{{ file }}</a></li>
+                <li {{ loop.index == 1 ? 'class="active"' : '' }}><a href="#i{{ file|md5 }}" data-toggle="tab">{{ basename(file) }}</a></li>
             {% endfor %}
         </ul>
 
         <div class="tab-content">
             {% for file, contents in tabs %}
                 <div class="tab-pane {{ loop.index == 1 ? 'active' : '' }}" id="i{{ file|md5 }}">
+                    <div class="text-center" style="color:grey;font-size:14px;">{{ file }}</div>
                     <pre><code>{{ contents }}</code></pre>
                 </div>
             {% endfor %}
