improved tabs + revamp home

--- a/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
@@ -35,6 +35,7 @@
             <p>No way to add, move and delete elements... In most case, that's weird on form collections!</p>
             <br/>
 
+            {% form_theme noPlugin 'FuzAppBundle:Home/home:formThemeNoButtons.html.twig'%}
             {{ form(noPlugin) }}
 
             {% for fruit in noPluginData.fruits %}
@@ -55,7 +56,7 @@
             {%
                 form_theme withPlugin
                     'jquery.collection.html.twig'
-                    'FuzAppBundle:Home/home:formTheme.html.twig'
+                    'FuzAppBundle:Home/home:formThemeWithButtons.html.twig'
             %}
             {{ form(withPlugin) }}
 
@@ -75,7 +76,8 @@
             'Entity/Home/Fruit.php',
             'Form/Home/FruitType.php',
             'Resources/views/Home/Home/home.html.twig',
-            'Resources/views/Home/Home/formTheme.html.twig',
+            'Resources/views/Home/Home/formThemeNoButtons.html.twig',
+            'Resources/views/Home/Home/formThemeWithButtons.html.twig',
         ])
     }}
 
