use of new elements_parent_selector on table example

--- a/src/Fuz/AppBundle/Resources/views/Basic/InATable/index.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Basic/InATable/index.html.twig
@@ -67,7 +67,9 @@
             allow_down: false,
             add: '<a href="#" class="btn btn-default" title="Add element"><span class="glyphicon glyphicon-plus-sign"></span></a>',
 
-            elements_selector: 'tr.item' // here is the magic!
+            // here is the magic!
+            elements_selector: 'tr.item',
+            elements_parent_selector: '%id% tbody'
         });
 
     </script>
