began to add new demo with doctrine and several relations

--- a/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Home/Home/home.html.twig
@@ -87,7 +87,11 @@
 {% block script %}
 
     <script type="text/javascript">
-        $('.withPlugin-collection').collection({allow_duplicate: true});
+
+        $('.withPlugin-collection').collection({
+            allow_duplicate: true,
+        });
+
     </script>
 
 {% endblock %}
