--- a/src/Fuz/AppBundle/Resources/views/Options/overview.html.twig
+++ b/src/Fuz/AppBundle/Resources/views/Options/overview.html.twig
@@ -28,56 +28,72 @@
                         <div class="col-md-4">
                             <div class="checkbox">
                                 <label for="enable-up">
-                                    <input name="enable-up" id="enable-up" class="reload-collection" type="checkbox" checked>
+                                    <input name="enable-up" id="enable-up" class="reload-collection" type="checkbox"
+                                           checked>
                                     Enable Move Up button
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="enable-down">
-                                    <input name="enable-buttons" id="enable-down" class="reload-collection" type="checkbox" checked>
+                                    <input name="enable-buttons" id="enable-down" class="reload-collection"
+                                           type="checkbox" checked>
                                     Enable Move Down button
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="enable-add">
-                                    <input name="enable-buttons" id="enable-add" class="reload-collection" type="checkbox" checked>
+                                    <input name="enable-buttons" id="enable-add" class="reload-collection"
+                                           type="checkbox" checked>
                                     Enable Add button
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="enable-remove">
-                                    <input name="enable-buttons" id="enable-remove" class="reload-collection" type="checkbox" checked>
+                                    <input name="enable-buttons" id="enable-remove" class="reload-collection"
+                                           type="checkbox" checked>
                                     Enable Remove button
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="enable-duplicate">
-                                    <input name="enable-buttons" id="enable-duplicate" class="reload-collection" type="checkbox" checked>
+                                    <input name="enable-buttons" id="enable-duplicate" class="reload-collection"
+                                           type="checkbox" checked>
                                     Enable Duplicate button
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="add-at-the-end">
-                                    <input name="add-at-the-end" id="add-at-the-end" class="reload-collection" type="checkbox">
+                                    <input name="add-at-the-end" id="add-at-the-end" class="reload-collection"
+                                           type="checkbox">
                                     Move Add button at the bottom
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="drag-drop">
-                                    <input name="drag-drop" id="drag-drop" class="reload-collection" type="checkbox" checked>
+                                    <input name="drag-drop" id="drag-drop" class="reload-collection" type="checkbox"
+                                           checked>
                                     Enable Drag & Drop
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="fade-in">
-                                    <input name="fade-in" id="fade-in" class="reload-collection" type="checkbox" checked>
+                                    <input name="fade-in" id="fade-in" class="reload-collection" type="checkbox"
+                                           checked>
                                     Enable Fade In animation
                                 </label>
                             </div>
                             <div class="checkbox">
                                 <label for="fade-out">
-                                    <input name="fade-out" id="fade-out" class="reload-collection" type="checkbox" checked>
+                                    <input name="fade-out" id="fade-out" class="reload-collection" type="checkbox"
+                                           checked>
                                     Enable Fade Out animation
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label for="preserve-names">
+                                    <input name="preserve-names" id="preserve-names" class="reload-collection"
+                                           type="checkbox">
+                                    Enable Preserve Names
                                 </label>
                             </div>
                         </div>
@@ -87,10 +103,10 @@
                         <label class="col-md-4 control-label" for="up-layout">Change Up layout</label>
                         <div class="col-md-4">
                             <input
-                                id="up-layout"
-                                value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-up"></a>'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="up-layout"
+                                    value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-up"></a>'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a link</span>
                         </div>
                     </div>
@@ -99,10 +115,10 @@
                         <label class="col-md-4 control-label" for="down-layout">Change Down layout</label>
                         <div class="col-md-4">
                             <input
-                                id="down-layout"
-                                value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-down"></a>'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="down-layout"
+                                    value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-arrow-down"></a>'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a link</span>
                         </div>
                     </div>
@@ -111,10 +127,10 @@
                         <label class="col-md-4 control-label" for="add-layout">Change Add layout</label>
                         <div class="col-md-4">
                             <input
-                                id="add-layout"
-                                value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></a>'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="add-layout"
+                                    value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign"></a>'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a link</span>
                         </div>
                     </div>
@@ -123,10 +139,10 @@
                         <label class="col-md-4 control-label" for="remove-layout">Change Remove layout</label>
                         <div class="col-md-4">
                             <input
-                                id="remove-layout"
-                                value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-trash"></a>'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="remove-layout"
+                                    value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-trash"></a>'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a link</span>
                         </div>
                     </div>
@@ -135,10 +151,10 @@
                         <label class="col-md-4 control-label" for="duplicate-layout">Change Duplicate layout</label>
                         <div class="col-md-4">
                             <input
-                                id="duplicate-layout"
-                                value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-th-large"></a>'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="duplicate-layout"
+                                    value='<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-th-large"></a>'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a link</span>
                         </div>
                     </div>
@@ -147,10 +163,10 @@
                         <label class="col-md-4 control-label" for="min-elements">Minimum of elements</label>
                         <div class="col-md-4">
                             <input
-                                id="min-elements"
-                                value='0'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="min-elements"
+                                    value='0'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a number</span>
                         </div>
                     </div>
@@ -159,22 +175,23 @@
                         <label class="col-md-4 control-label" for="max-elements">Maximum of elements</label>
                         <div class="col-md-4">
                             <input
-                                id="max-elements"
-                                value='5'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="max-elements"
+                                    value='5'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a number</span>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-4 control-label" for="init-witn-n-elements">Initialize with N elements</label>
+                        <label class="col-md-4 control-label" for="init-witn-n-elements">Initialize with N
+                            elements</label>
                         <div class="col-md-4">
                             <input
-                                id="init-witn-n-elements"
-                                value='0'
-                                class="form-control input-md reload-collection"
-                                type="text">
+                                    id="init-witn-n-elements"
+                                    value='0'
+                                    class="form-control input-md reload-collection"
+                                    type="text">
                             <span class="help-block">Should be a number</span>
                         </div>
                     </div>
@@ -182,14 +199,12 @@
                 </fieldset>
             </form>
 
-            {{
-                tabs([
-                    'Base/BaseController.php',
-                    'Controller/OptionsController.php',
-                    'Resources/views/Options/overview.html.twig',
-                    'Resources/views/Options/options-theme.html.twig',
-                ])
-            }}
+            {{ tabs([
+            'Base/BaseController.php',
+            'Controller/OptionsController.php',
+            'Resources/views/Options/overview.html.twig',
+            'Resources/views/Options/options-theme.html.twig',
+            ]) }}
 
         </div>
 
@@ -216,11 +231,11 @@
 
         // follow-scroll
         // credits: https://stackoverflow.com/a/2178569/731138
-        (function($) {
+        (function ($) {
             var element = $('.follow-scroll'), originalY = element.offset().top;
             var topMargin = 20;
             element.css('position', 'relative');
-            $(window).on('scroll', function(event) {
+            $(window).on('scroll', function (event) {
                 var scrollTop = $(window).scrollTop();
                 element.stop(false, false).animate({
                     top: scrollTop < originalY ? 0 : scrollTop - originalY + topMargin
@@ -252,6 +267,7 @@
                 drag_drop: $('#drag-drop').is(':checked'),
                 fade_in: $('#fade-in').is(':checked'),
                 fade_out: $('#fade-out').is(':checked'),
+                preserve_names: $('#preserve-names').is(':checked'),
             });
         }
 
